force-app/main/default/objects/Site_Authorized_Contact__c/Site_Authorized_Contact__c.object-meta.xml
<CustomObject>
    <label>Site Authorized Contact</label>
    <nameField>
        <displayFormat>SAC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Authorized Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>