force-app/main/default/objects/Site_Authorized_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Clinical Research Co-Ordinator</fullName>
            </value>
            <value>
                <fullName>Site User</fullName>
            </value>
            <value>
                <fullName>Manufacturing Scheduler</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
            <value>
                <fullName>Cell Therapy Logistics</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>