force-app/main/default/objects/Site_Authorized_Contact__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Authorized Contact</relationshipLabel>
    <relationshipName>Site_Authorized_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>