force-app/main/default/objects/Site_Authorized_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>